@@ -3,48 +3,50 @@ package dao;
 import com.almworks.sqlite4java.SQLiteConnection;
 import com.almworks.sqlite4java.SQLiteException;
 import com.almworks.sqlite4java.SQLiteStatement;
-import entity.File;
+import entity.Local;
 import entity.Temporary;
-import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.List;
 
 public class TemporaryDAO {
 
     private final SQLiteConnection connection;
-    private static final String createQuery = "INSERT INTO files (fname, path, is_dir) VALUES (?, ?, ?) RETURNING id;";
-    private static final String deleteQuery = "DELETE FROM files WHERE fname = ? AND path = ?;";
+    private static final String createQuery = "INSERT INTO files (fname, path, is_dir, owner, ip) VALUES (?, ?, ?, ?, ?) RETURNING id;";
+    private static final String deleteQuery = "DELETE FROM files WHERE fname = ? AND path = ? AND owner = ?;";
     private static final String renameQuery = "UPDATE files SET fname = ? WHERE id = ?;";
-    private static final String mkdirQuery = "INSERT INTO files (fname, path, is_dir) VALUES (?, ?, ?) RETURNING id";
-    private static final String readdirQuery = "SELECT * FROM files WHERE path = ?;";
+    private static final String mkdirQuery = "INSERT INTO files (fname, path, is_dir, owner, ip) VALUES (?, ?, ?, ?, ?) RETURNING id";
+    private static final String readdirQuery = "SELECT * FROM files WHERE path = ? AND owner = ?;";
 
     public TemporaryDAO(SQLiteConnection connection) {
         this.connection = connection;
     }
 
-    public String read(File file) throws SQLiteException {
+    public String read(Local file) throws SQLiteException {
         return null;
     }
 
-    public Integer create(File file) throws SQLiteException {
+    public Integer create(Local file, String ip) throws SQLiteException {
         SQLiteStatement statement = connection.prepare(createQuery);
         statement.bind(1, file.getFname());
         statement.bind(2, file.getPath());
         statement.bind(3, file.getIs_dir().toString());
+        statement.bind(4, file.getOwner());
+        statement.bind(5, ip);
         if (statement.step()) {
             return (Integer) statement.columnValue(0);
         }
         return null;
     }
 
-    public void delete(File file) throws SQLiteException {
+    public void delete(Local file) throws SQLiteException {
         SQLiteStatement statement = connection.prepare(deleteQuery);
         statement.bind(1, file.getFname());
         statement.bind(2, file.getPath());
+        statement.bind(3, file.getOwner());
         statement.step();
     }
 
-    public void rename(File file) throws SQLiteException {
+    public void rename(Local file) throws SQLiteException {
         SQLiteStatement statement = connection.prepare(renameQuery);
         statement.bind(1, file.getFname());
         statement.bind(2, file.getUpdated_at().toString());
@@ -52,34 +54,38 @@ public class TemporaryDAO {
         statement.step();
     }
 
-    public Integer mkdir(File file) throws SQLiteException {
+    public Integer mkdir(Local file, String ip) throws SQLiteException {
         SQLiteStatement statement = connection.prepare(mkdirQuery);
         statement.bind(1, file.getFname());
         statement.bind(2, file.getPath());
         statement.bind(3, file.getIs_dir().toString());
+        statement.bind(4, file.getOwner());
+        statement.bind(5, ip);
         if (statement.step()) {
             return (Integer) statement.columnValue(0);
         }
         return null;
     }
 
-    public void rmdir(File file) throws SQLiteException {
+    public void rmdir(Local file) throws SQLiteException {
         SQLiteStatement statement = connection.prepare(deleteQuery);
         statement.bind(1, file.getFname());
         statement.bind(2, file.getPath());
         statement.step();
     }
 
-    public List<Temporary> readdir(String path) throws SQLiteException {
+    public List<Temporary> readdir(Local f) throws SQLiteException {
         List<Temporary> fileList = new ArrayList<>();
 
         SQLiteStatement statement = connection.prepare(readdirQuery);
-        statement.bind(1, path);
+        statement.bind(1, f.getPath());
+        statement.bind(2, f.getOwner());
         while (statement.step()) {
             Temporary file = new Temporary();
             file.setId((Integer) statement.columnValue(0));
             file.setFname((String) statement.columnValue(1));
-            file.setIs_dir(new Boolean((String) statement.columnValue(3)));
+            file.setIs_dir(Boolean.valueOf((String) statement.columnValue(3)));
+            file.setIp((String) statement.columnValue(4));
 
             fileList.add(file);
         }
